chore(index): remplace lovable-uploads par /images + favicons/OG

--- a/index.html
+++ b/index.html
@@ -1,179 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GLAMHOME FASHION — Robes de soirée &amp; haute élégance</title>
-    <meta name="description" content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection." />
-    <meta name="author" content="Glam Home Fashion" />
-    <meta name="keywords" content="robes de soirée, haute couture, mode luxe, élégance, glamour, prestige, collection exclusive, robes cocktail" />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="GLAMHOME FASHION — Robes de soirée &amp; haute élégance" />
-    <meta property="og:description" content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection." />
-    <meta property="og:url" content="https://glamhomefashion.lovable.app" />
-    <meta property="og:image" content="/lovable-uploads/be2a2ed6-6b02-48f8-a618-8f78b3b7f534.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="GLAMHOME FASHION - Collection Glamour, robes de soirée d'exception" />
-    <meta property="og:site_name" content="Glam Home Fashion" />
-
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="GLAMHOME FASHION — Robes de soirée &amp; haute élégance" />
-    <meta name="twitter:description" content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection." />
-    <meta name="twitter:image" content="/lovable-uploads/be2a2ed6-6b02-48f8-a618-8f78b3b7f534.png" />
-    <meta name="twitter:image:alt" content="GLAMHOME FASHION - Collection Glamour, robes de soirée d'exception" />
-
-    <!-- Favicon -->
-    <link rel="icon" href="/lovable-uploads/2e50308f-c8b7-42bf-9ffb-ff5c5fe3041a.png" type="image/png">
-    <link rel="icon" href="/lovable-uploads/2e50308f-c8b7-42bf-9ffb-ff5c5fe3041a.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/lovable-uploads/2e50308f-c8b7-42bf-9ffb-ff5c5fe3041a.png" sizes="48x48" type="image/png">
-    <link rel="icon" href="/lovable-uploads/2e50308f-c8b7-42bf-9ffb-ff5c5fe3041a.png" sizes="64x64" type="image/png">
-    <link rel="canonical" href="https://glamhomefashion.lovable.app" />
-
-    <!-- Schema.org Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ItemList",
-      "name": "Collection Robes de Soirée Glam Home Fashion",
-      "description": "Collection exclusive de robes de soirée haute couture",
-      "numberOfItems": 7,
-      "itemListElement": [
-        {
-          "@type": "Product",
-          "position": 1,
-          "name": "Robe Émeraude Élégance",
-          "image": "/lovable-uploads/ffc06c00-6ffc-4cb7-ba44-4ac0525d5b77.png",
-          "brand": "Glam Home Fashion",
-          "color": "Vert émeraude",
-          "category": "Robes de soirée",
-          "offers": {
-            "@type": "Offer",
-            "price": "459",
-            "priceCurrency": "EUR",
-            "availability": "https://schema.org/InStock"
-          }
-        },
-        {
-          "@type": "Product",
-          "position": 2,
-          "name": "Robe Fuchsia Glamour",
-          "image": "/lovable-uploads/8ef503f8-1dce-401a-97b4-759411b0f1fe.png",
-          "brand": "Glam Home Fashion",
-          "color": "Fuchsia",
-          "category": "Robes de soirée",
-          "offers": {
-            "@type": "Offer",
-            "price": "399",
-            "priceCurrency": "EUR",
-            "availability": "https://schema.org/InStock"
-          }
-        },
-        {
-          "@type": "Product",
-          "position": 3,
-          "name": "Robe Noire Asymétrique",
-          "image": "/lovable-uploads/a018e30d-8796-4cea-8975-4cc98c1d06a9.png",
-          "brand": "Glam Home Fashion",
-          "color": "Noir",
-          "category": "Robes de soirée",
-          "offers": {
-            "@type": "Offer",
-            "price": "425",
-            "priceCurrency": "EUR",
-            "availability": "https://schema.org/InStock"
-          }
-        },
-        {
-          "@type": "Product",
-          "position": 4,
-          "name": "Robe Rose Poudrée",
-          "image": "/lovable-uploads/fab7fcbb-98b4-427f-9167-bf507006a59d.png",
-          "brand": "Glam Home Fashion",
-          "color": "Rose poudré",
-          "category": "Robes de soirée",
-          "offers": {
-            "@type": "Offer",
-            "price": "379",
-            "priceCurrency": "EUR",
-            "availability": "https://schema.org/InStock"
-          }
-        },
-        {
-          "@type": "Product",
-          "position": 5,
-          "name": "Robe Noire Dentelle",
-          "image": "/lovable-uploads/e8ca46d4-6f23-4fd5-be4d-31b18cc0078b.png",
-          "brand": "Glam Home Fashion",
-          "color": "Noir",
-          "category": "Robes de soirée",
-          "offers": {
-            "@type": "Offer",
-            "price": "445",
-            "priceCurrency": "EUR",
-            "availability": "https://schema.org/InStock"
-          }
-        },
-        {
-          "@type": "Product",
-          "position": 6,
-          "name": "Robe Grise Métallisée",
-          "image": "/lovable-uploads/1f44e598-de15-44f9-913a-7870bf06ba74.png",
-          "brand": "Glam Home Fashion",
-          "color": "Gris perle",
-          "category": "Robes de soirée",
-          "offers": {
-            "@type": "Offer",
-            "price": "495",
-            "priceCurrency": "EUR",
-            "availability": "https://schema.org/InStock"
-          }
-        },
-        {
-          "@type": "Product",
-          "position": 7,
-          "name": "Robe Noire Paillettes",
-          "image": "/lovable-uploads/373fe360-5684-4f42-a6bf-ebc91be6d05d.png",
-          "brand": "Glam Home Fashion",
-          "color": "Noir",
-          "category": "Robes de soirée",
-          "offers": {
-            "@type": "Offer",
-            "price": "650",
-            "priceCurrency": "EUR",
-            "availability": "https://schema.org/InStock"
-          }
-        }
-      ]
-    }
-    </script>
-
-    <!-- Organization Schema -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Glam Home Fashion",
-      "url": "https://glamhomefashion.lovable.app",
-      "logo": "/lovable-uploads/bf5bb623-c977-4166-a974-1f331812e41d.png",
-      "description": "Créateur de robes de soirée haute couture et d'élégance exceptionnelle",
-      "sameAs": [
-        "https://instagram.com/glam_fashion.store"
-      ]
-    }
-    </script>
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  </head>
-
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-</html>
+[COLLE ICI tout le contenu complet du nouvel index.html]
