chore: remove lovable-tagger + cleanup index meta + delete sitemaps

--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GLAMHOME FASHION — Robes de soirée &amp; haute élégance</title>
-    <meta
-      name="description"
-      content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection."
-    />
+    <meta name="description" content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection." />
     <meta name="author" content="Glam Home Fashion" />
-    <meta
-      name="keywords"
-      content="robes de soirée, haute couture, mode luxe, élégance, glamour, prestige, collection exclusive, robes cocktail"
-    />
+    <meta name="keywords" content="robes de soirée, haute couture, mode luxe, élégance, glamour, prestige, collection exclusive, robes cocktail" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="GLAMHOME FASHION — Robes de soirée &amp; haute élégance" />
-    <meta
-      property="og:description"
-      content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection."
-    />
-    <meta property="og:url" content="https://glamhomefashion.lovable.app" />
-    <!-- ⚠️ fichier en minuscules pour correspondre à /public/images/homepage/g4.png -->
+    <meta property="og:description" content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection." />
+    <!-- pas d'og:url tant qu'on n'a pas de domaine public -->
     <meta property="og:image" content="/images/homepage/g4.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -32,64 +22,43 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GLAMHOME FASHION — Robes de soirée &amp; haute élégance" />
-    <meta
-      name="twitter:description"
-      content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection."
-    />
-    <!-- ⚠️ idem : minuscule -->
+    <meta name="twitter:description" content="Robes de soirée, silhouettes raffinées et matières d'exception. Découvrez la Glamour &amp; Prestige Collection." />
     <meta name="twitter:image" content="/images/homepage/g4.png" />
     <meta name="twitter:image:alt" content="GLAMHOME FASHION - Collection Glamour, robes de soirée d'exception" />
 
-    <!-- Favicon -->
-    <link rel="icon" href="/images/logos/logo-32.png" sizes="32x32" type="image/png" />
-    <link rel="icon" href="/images/logos/logo-128.png" sizes="128x128" type="image/png" />
-    <link rel="icon" href="/images/logos/logo-256.png" sizes="256x256" type="image/png" />
-    <link rel="icon" href="/images/logos/logo-512.png" sizes="512x512" type="image/png" />
+    <!-- Favicons -->
+    <link rel="icon" href="/images/logos/logo-32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="/images/logos/logo-128.png" sizes="128x128" type="image/png">
+    <link rel="icon" href="/images/logos/logo-256.png" sizes="256x256" type="image/png">
+    <link rel="icon" href="/images/logos/logo-512.png" sizes="512x512" type="image/png">
     <link rel="apple-touch-icon" href="/images/logos/logo-256.png" />
-    <link rel="canonical" href="https://glamhomefashion.lovable.app" />
+    <!-- pas de canonical tant qu'on n'a pas de domaine public -->
 
-    <!-- Schema.org Structured Data -->
+    <!-- Schema.org Structured Data (exemple ItemList) -->
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "ItemList",
-        "name": "Collection Robes de Soirée Glam Home Fashion",
-        "description": "Collection exclusive de robes de soirée haute couture",
-        "numberOfItems": 7,
-        "itemListElement": [
-          { "@type": "Product", "position": 1, "name": "Robe Émeraude Élégance", "image": "/images/dresses/r1.png", "brand": "Glam Home Fashion", "color": "Vert émeraude", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "459", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
-          { "@type": "Product", "position": 2, "name": "Robe Fuchsia Glamour", "image": "/images/dresses/r2.png", "brand": "Glam Home Fashion", "color": "Fuchsia", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "399", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
-          { "@type": "Product", "position": 3, "name": "Robe Noire Asymétrique", "image": "/images/dresses/r3.png", "brand": "Glam Home Fashion", "color": "Noir", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "425", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
-          { "@type": "Product", "position": 4, "name": "Robe Rose Poudrée", "image": "/images/dresses/r4.png", "brand": "Glam Home Fashion", "color": "Rose poudré", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "379", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
-          { "@type": "Product", "position": 5, "name": "Robe Noire Dentelle", "image": "/images/dresses/r5.png", "brand": "Glam Home Fashion", "color": "Noir", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "445", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
-          { "@type": "Product", "position": 6, "name": "Robe Grise Métallisée", "image": "/images/dresses/r6.png", "brand": "Glam Home Fashion", "color": "Gris perle", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "495", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
-          { "@type": "Product", "position": 7, "name": "Robe Noire Paillettes", "image": "/images/dresses/r7.png", "brand": "Glam Home Fashion", "color": "Noir", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "650", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } }
-        ]
-      }
-    </script>
-
-    <!-- Organization Schema -->
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Glam Home Fashion",
-        "url": "https://glamhomefashion.lovable.app",
-        "logo": "/images/logos/logo-256.png",
-        "description": "Créateur de robes de soirée haute couture et d'élégance exceptionnelle",
-        "sameAs": ["https://instagram.com/glam_fashion.store"]
-      }
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "name": "Collection Robes de Soirée Glam Home Fashion",
+      "description": "Collection exclusive de robes de soirée haute couture",
+      "numberOfItems": 7,
+      "itemListElement": [
+        { "@type": "Product", "position": 1, "name": "Robe Émeraude Élégance", "image": "/images/dresses/r1.png", "brand": "Glam Home Fashion", "color": "Vert émeraude", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "459", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
+        { "@type": "Product", "position": 2, "name": "Robe Fuchsia Glamour",   "image": "/images/dresses/r2.png", "brand": "Glam Home Fashion", "color": "Fuchsia", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "399", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
+        { "@type": "Product", "position": 3, "name": "Robe Noire Asymétrique","image": "/images/dresses/r3.png", "brand": "Glam Home Fashion", "color": "Noir", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "425", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
+        { "@type": "Product", "position": 4, "name": "Robe Rose Poudrée",     "image": "/images/dresses/r4.png", "brand": "Glam Home Fashion", "color": "Rose poudré", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "379", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
+        { "@type": "Product", "position": 5, "name": "Robe Noire Dentelle",   "image": "/images/dresses/r5.png", "brand": "Glam Home Fashion", "color": "Noir", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "445", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
+        { "@type": "Product", "position": 6, "name": "Robe Grise Métallisée", "image": "/images/dresses/r6.png", "brand": "Glam Home Fashion", "color": "Gris perle", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "495", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } },
+        { "@type": "Product", "position": 7, "name": "Robe Noire Paillettes", "image": "/images/dresses/r7.png", "brand": "Glam Home Fashion", "color": "Noir", "category": "Robes de soirée", "offers": { "@type": "Offer", "price": "650", "priceCurrency": "EUR", "availability": "https://schema.org/InStock" } }
+      ]
+    }
     </script>
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
